# AI_tennis_game_analysis

./: .gitignore  README.md  pyproject.toml
src/tennis_ai/: main.py  yolo_inference.py
src/tennis_ai/analysis/: ball_analysis.ipynb
src/tennis_ai/court_line_detector/: court_line_detector.py
src/tennis_ai/mini_court/: mini_court.py
src/tennis_ai/trackers/: ball_tracker.py  player_tracker.py
src/tennis_ai/training/: tennis_ball_detector_training.ipynb  tennis_court_key_points_training.ipynb
src/tennis_ai/utils/: __init__.py  bbox_utils.py  conversions.py  player_stats_drawer_utils.py  video_utils.py
