[tool.poetry]
name = "ai-tennis-game-analysis"
version = "0.1.0"
description = "Tennis game analysis using AI models such as YOLO."
authors = ["Szymon-Budziak <szymonbudziak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tennis_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
ultralytics = "^8.2.2"
roboflow = "^1.1.27"
python-dotenv = "^1.0.1"
torch = "^2.3.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
